k8s-local/manifest.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
        
    - name: db
      image: postgres
      ports:
        - containerPort: 5432
